--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,181 +1,201 @@
-     <div class="header-top">
-	   <div class="wrap"> 
-			  <div class="header-top-left">
+<div class="header-top">
+	<div class="wrap"> 
+		<div class="header-top-left">
+			<% if user_signed_in? %>
+			<%=current_user.name%>
+			<% end %>
+			<!--div class="box">
+			<select tabindex="4" class="dropdown">
+			<option value="" class="label" value="">Language :</option>
+			<option value="1">English</option>
+			<option value="2">French</option>
+			<option value="3">German</option>
+			</select>
+			</div>
+			<div class="box1">
+			<select tabindex="4" class="dropdown">
+			<option value="" class="label" value="">Currency :</option>
+			<option value="1">$ Dollar</option>
+			<option value="2">€ Euro</option>
+			</select>
+			</div-->
+			<div class="clear"></div>
+		</div>
+		<div class="cssmenu">
+			<ul>
 				<% if user_signed_in? %>
-					<%=current_user.name%>
-				<% end %>
-			  	   <!--div class="box">
-   				      <select tabindex="4" class="dropdown">
-							<option value="" class="label" value="">Language :</option>
-							<option value="1">English</option>
-							<option value="2">French</option>
-							<option value="3">German</option>
-					  </select>
-   				    </div>
-   				    <div class="box1">
-   				        <select tabindex="4" class="dropdown">
-							<option value="" class="label" value="">Currency :</option>
-							<option value="1">$ Dollar</option>
-							<option value="2">€ Euro</option>
-						</select>
-   				    </div-->
-   				    <div class="clear"></div>
-   			 </div>
-			 <div class="cssmenu">
-				<% if user_signed_in? %>
-				<ul>
 					<% if !current_user.profile_detail.nil? %>
 						<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
-						<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%> </li>
+						<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%>
+							<!--ul>
+								<li><%= link_to "Change Password", edit_user_registration_path%></li> |
+							</ul-->
+						</li> |
 					<%else%>
-						<li><%= link_to "Profile", new_profile_detail_path%> </li>
+						<li><%= link_to "Profile", new_profile_detail_path%>        
+							<!--ul>
+								<li><%= link_to "Change Password", edit_user_registration_path%></li>
+							</ul-->
+						</li> |
 					<%end%>
-					 <% if User.find_role?(current_user) %>
-					 <li><%= link_to "Users", users_path %> </li>
-					 <li><%= link_to "Retailers", retailer_requests_admins_path %> </li>
-					 <li><%= link_to "Products", product_items_path %> </li>
+					<% if User.find_role?(current_user) == "A"%>
+						<li><%= link_to "Users", users_path %> </li> |
+						<li><%= link_to "Retailers", retailer_requests_admins_path %> 
+							<!--ul>
+								<li><a href="/admins/retailer_requests">User  Request</a></li>
+								<li><a href="/admins/product_approval">Product Approval</a></li>
+							</ul-->
+						</li> |
+						<li><%= link_to "Products", product_items_path %> 
+							<!--ul>
+								<li><a href="/product_categories">Categories</a></li>
+								<li><a href="/product_brands">Brands</a></li>
+								<li><a href="/admins/assign">Assign</a></li>
+							</ul-->
+						</li> |
 					<%end%>
-					 <% if User.find_role?(current_user)%>
-						<li><%= link_to "Products", product_items_path %> </li>
+					<% if User.find_role?(current_user) == "B"%>
+						<li><%= link_to "Products", product_items_path %> </li> |
 					<%end%>
-					<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li>
-				</ul>
-				<%else%>
-				<ul>
-					<li class="active"><a href="login.html">Account</a></li> |
-					<li><a href="checkout.html">Wishlist</a></li> |
-					<li><a href="checkout.html">Checkout</a></li> |
+					<% if User.find_role?(current_user) == "C"%>
+						<%if current_user.cart.product_item_ids && current_user.cart.product_item_ids%>
+							<li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li> |
+						<%else%>
+							<li><%= link_to "My Cart", carts_path %> </li> |
+						<% end %>
+					<%end%>
+					<li><%= link_to "Logout", destroy_user_session_path, :method=> :delete%></li> |
+				<% else %>
+					<li><%= link_to "Sign up", new_user_registration_path %> </li> |
+					<li> <%= link_to "Log In", new_user_session_path%></li> |
 					<li><a href="/home/info_graphics_ecommerce">Ecommerce</a></li> |
 					<li><a href="/home/info_graphics_youtube">Youtube</a></li> |
-					<li><%=link_to "Log In", sign_in_path%></li> |
-					<li><%=link_to "Sign Up", new_user_registration_path%></li>
-				</ul>
-				<%end%>
-				
-			</div>
-			<div class="clear"></div>
- 		</div>
-	</div>
-	<div class="header-bottom">
-	    <div class="wrap">
-			<div class="header-bottom-left">
-				<div class="logo">
-					<a href="index.html"><img src="/assets/leoshop-images/logo.png" alt=""/></a>
-				</div>
-				<div class="menu">
-	            <ul class="megamenu skyblue">
-			<li class="active grid"><a href="index.html">Home</a></li>
-			<li><a class="color4" href="#">women</a>
-				<div class="megapanel">
-					<div class="row">
-						<div class="col1">
-							<div class="h_nav">
-								<h4>Contact Lenses</h4>
-								<ul>
-									<li><a href="womens.html">Daily-wear soft lenses</a></li>
-									<li><a href="womens.html">Extended-wear</a></li>
-									<li><a href="womens.html">Lorem ipsum </a></li>
-									<li><a href="womens.html">Planned replacement</a></li>
-								</ul>	
-							</div>							
-						</div>
-						<div class="col1">
-							<div class="h_nav">
-								<h4>Sun Glasses</h4>
-								<ul>
-									<li><a href="womens.html">Heart-Shaped</a></li>
-									<li><a href="womens.html">Square-Shaped</a></li>
-									<li><a href="womens.html">Round-Shaped</a></li>
-									<li><a href="womens.html">Oval-Shaped</a></li>
-								</ul>	
-							</div>							
-						</div>
-						<div class="col1">
-							<div class="h_nav">
-								<h4>Eye Glasses</h4>
-								<ul>
-									<li><a href="womens.html">Anti Reflective</a></li>
-									<li><a href="womens.html">Aspheric</a></li>
-									<li><a href="womens.html">Bifocal</a></li>
-									<li><a href="womens.html">Hi-index</a></li>
-									<li><a href="womens.html">Progressive</a></li>
-								</ul>	
-							</div>												
-						</div>
-					  </div>
-					</div>
-				</li>				
-				<li><a class="color5" href="#">Men</a>
-				<div class="megapanel">
-					<div class="col1">
-							<div class="h_nav">
-								<h4>Contact Lenses</h4>
-								<ul>
-									<li><a href="mens.html">Daily-wear soft lenses</a></li>
-									<li><a href="mens.html">Extended-wear</a></li>
-									<li><a href="mens.html">Lorem ipsum </a></li>
-									<li><a href="mens.html">Planned replacement</a></li>
-								</ul>	
-							</div>							
-						</div>
-						<div class="col1">
-							<div class="h_nav">
-								<h4>Sun Glasses</h4>
-								<ul>
-									<li><a href="mens.html">Heart-Shaped</a></li>
-									<li><a href="mens.html">Square-Shaped</a></li>
-									<li><a href="mens.html">Round-Shaped</a></li>
-									<li><a href="mens.html">Oval-Shaped</a></li>
-								</ul>	
-							</div>							
-						</div>
-						<div class="col1">
-							<div class="h_nav">
-								<h4>Eye Glasses</h4>
-								<ul>
-									<li><a href="mens.html">Anti Reflective</a></li>
-									<li><a href="mens.html">Aspheric</a></li>
-									<li><a href="mens.html">Bifocal</a></li>
-									<li><a href="mens.html">Hi-index</a></li>
-									<li><a href="mens.html">Progressive</a></li>
-								</ul>	
-							</div>												
-						</div>
-					</div>
-				</li>
-				<li><a class="color6" href="other.html">Other</a></li>
-				<li><a class="color7" href="other.html">Purchase</a></li>
-			</ul>
-			</div>
+				<% end %>
+			</ul>	
 		</div>
-	   <div class="header-bottom-right">
-         <div class="search">	  
-				<input type="text" name="s" class="textbox" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
-				<input type="submit" value="Subscribe" id="submit" name="submit">
-				<div id="response"> </div>
-		 </div>
-	  <div class="tag-list">
-	    <ul class="icon1 sub-icon1 profile_img">
-			<li><a class="active-icon c1" href="#"> </a>
-				<ul class="sub-icon1 list">
-					<li><h3>sed diam nonummy</h3><a href=""></a></li>
-					<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
-				</ul>
-			</li>
-		</ul>
-		<ul class="icon1 sub-icon1 profile_img">
-			<li><a class="active-icon c2" href="#"> </a>
-				<ul class="sub-icon1 list">
-					<li><h3>No Products</h3><a href=""></a></li>
-					<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
-				</ul>
-			</li>
-		</ul>
-	    <ul class="last"><li><a href="#">Cart(0)</a></li></ul>
-	  </div>
-    </div>
-     <div class="clear"></div>
-     </div>
+		<div class="clear"></div>
 	</div>
+</div>
+<div class="header-bottom">
+		<div class="wrap">
+		<div class="header-bottom-left">
+			<div class="logo">
+				<a href="index.html"><img src="/assets/leoshop-images/logo.png" alt=""/></a>
+			</div>
+			<div class="menu">
+						<ul class="megamenu skyblue">
+		<li class="active grid"><a href="index.html">Home</a></li>
+		<li><a class="color4" href="#">women</a>
+			<div class="megapanel">
+				<div class="row">
+					<div class="col1">
+						<div class="h_nav">
+							<h4>Contact Lenses</h4>
+							<ul>
+								<li><a href="womens.html">Daily-wear soft lenses</a></li>
+								<li><a href="womens.html">Extended-wear</a></li>
+								<li><a href="womens.html">Lorem ipsum </a></li>
+								<li><a href="womens.html">Planned replacement</a></li>
+							</ul>	
+						</div>							
+					</div>
+					<div class="col1">
+						<div class="h_nav">
+							<h4>Sun Glasses</h4>
+							<ul>
+								<li><a href="womens.html">Heart-Shaped</a></li>
+								<li><a href="womens.html">Square-Shaped</a></li>
+								<li><a href="womens.html">Round-Shaped</a></li>
+								<li><a href="womens.html">Oval-Shaped</a></li>
+							</ul>	
+						</div>							
+					</div>
+					<div class="col1">
+						<div class="h_nav">
+							<h4>Eye Glasses</h4>
+							<ul>
+								<li><a href="womens.html">Anti Reflective</a></li>
+								<li><a href="womens.html">Aspheric</a></li>
+								<li><a href="womens.html">Bifocal</a></li>
+								<li><a href="womens.html">Hi-index</a></li>
+								<li><a href="womens.html">Progressive</a></li>
+							</ul>	
+						</div>												
+					</div>
+					</div>
+				</div>
+			</li>				
+			<li><a class="color5" href="#">Men</a>
+			<div class="megapanel">
+				<div class="col1">
+						<div class="h_nav">
+							<h4>Contact Lenses</h4>
+							<ul>
+								<li><a href="mens.html">Daily-wear soft lenses</a></li>
+								<li><a href="mens.html">Extended-wear</a></li>
+								<li><a href="mens.html">Lorem ipsum </a></li>
+								<li><a href="mens.html">Planned replacement</a></li>
+							</ul>	
+						</div>							
+					</div>
+					<div class="col1">
+						<div class="h_nav">
+							<h4>Sun Glasses</h4>
+							<ul>
+								<li><a href="mens.html">Heart-Shaped</a></li>
+								<li><a href="mens.html">Square-Shaped</a></li>
+								<li><a href="mens.html">Round-Shaped</a></li>
+								<li><a href="mens.html">Oval-Shaped</a></li>
+							</ul>	
+						</div>							
+					</div>
+					<div class="col1">
+						<div class="h_nav">
+							<h4>Eye Glasses</h4>
+							<ul>
+								<li><a href="mens.html">Anti Reflective</a></li>
+								<li><a href="mens.html">Aspheric</a></li>
+								<li><a href="mens.html">Bifocal</a></li>
+								<li><a href="mens.html">Hi-index</a></li>
+								<li><a href="mens.html">Progressive</a></li>
+							</ul>	
+						</div>												
+					</div>
+				</div>
+			</li>
+			<li><a class="color6" href="other.html">Other</a></li>
+			<li><a class="color7" href="other.html">Purchase</a></li>
+		</ul>
+		</div>
+	</div>
+	 <div class="header-bottom-right">
+			 <div class="search">	  
+			<input type="text" name="s" class="textbox" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
+			<input type="submit" value="Subscribe" id="submit" name="submit">
+			<div id="response"> </div>
+	 </div>
+	<div class="tag-list">
+		<ul class="icon1 sub-icon1 profile_img">
+		<li><a class="active-icon c1" href="#"> </a>
+			<ul class="sub-icon1 list">
+				<li><h3>sed diam nonummy</h3><a href=""></a></li>
+				<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
+			</ul>
+		</li>
+	</ul>
+	<ul class="icon1 sub-icon1 profile_img">
+		<li><a class="active-icon c2" href="#"> </a>
+			<ul class="sub-icon1 list">
+				<li><h3>No Products</h3><a href=""></a></li>
+				<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
+			</ul>
+		</li>
+	</ul>
+		<ul class="last"><li><a href="#">Cart(0)</a></li></ul>
+	</div>
+	</div>
+	 <div class="clear"></div>
+	 </div>
+</div>
 
   
