--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,25 +1,1 @@
-<h1>Listing admins</h1>
-
-<!--table>
-  <thead>
-    <tr>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <!--% @users && @users.each do |user| %>
-      <tr>
-        <td><!--%= link_to 'Show', user %></td>
-        <td><!--%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><!--%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <!--% end %>
-  </tbody>
-</table>
-
-<br!-->
-
-<!--%= link_to 'New Admin', new_user_path %>
+Admin 
