--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -60,7 +60,7 @@
 	    <div class="wrap">
 			<div class="header-bottom-left">
 				<div class="logo">
-					<a href="index.html"><img src="/assets/leoshop-images/logo.png" alt=""/></a>
+					<a href="/home/index"><img src="/assets/leoshop-images/logo.png"></a>
 				</div>
 				<div class="menu">
 	            <ul class="megamenu skyblue">
@@ -72,6 +72,7 @@
 							<div class="h_nav">
 								<h4>Contact Lenses</h4>
 								<ul>
+								<a href="/home/index"><img src="/assets/leoshop-images/logo.png"></a>
 									<li><a href="womens.html">Daily-wear soft lenses</a></li>
 									<li><a href="womens.html">Extended-wear</a></li>
 									<li><a href="womens.html">Lorem ipsum </a></li>
