--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Free Leoshop Website Template | Home :: w3layouts</title>
+		<title>Ecommerce</title>
 		<%= stylesheet_link_tag    "application" %>
 		<%= javascript_include_tag "application" %>
 		<%= csrf_meta_tags %>
@@ -19,6 +19,7 @@
 	</head>
 	<body>
 		<%= render "layouts/header" %>
+		<!--%= render "layouts/slider" %-->
 		<div>
 			<p class="notice_msg"><%= notice %></p>
 			<p class="alert_msg"><%= alert %></p>
