--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 	<head>
 		<title>Ecommerce</title>
 		<%= stylesheet_link_tag    "application" %>
-		<%= javascript_include_tag "application" %>
+		<%= javascript_include_tag "application", :defaults %>
 		<%= csrf_meta_tags %>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
