--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -169,11 +169,23 @@
 		</div>
 	</div>
 	 <div class="header-bottom-right">
-			 <div class="search">	  
+	 <div class="search">
+	 <form action="/home/search">
+	 	  
+			
+			<input type="text" class="textbox" name="key" placeholder="search here">
+<input type="submit" id="submit">
+						
+
+			</form>
+			</div>
+	 
+	 
+			 <!--div class="search">	  
 			<input type="text" name="s" class="textbox" value="Search" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Search';}">
 			<input type="submit" value="Subscribe" id="submit" name="submit">
 			<div id="response"> </div>
-	 </div>
+	 </div-->
 	<div class="tag-list">
 		<ul class="icon1 sub-icon1 profile_img">
 		<li><a class="active-icon c1" href="#"> </a>
