--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -1,41 +1,37 @@
-<%- model_class = ProductItem -%>
-<div class="page-header">
-  <h1>Products</h1>
-</div>
-<% if !@product_items.present? %>
-	Sorry!! No Products Found
-<% else %>
-	<% @product_items.each do |product_item| %>
-	<div class="divOuter">
-		<div class="divInner1"> 
-			<% if product_item.pictures.present?%>
-				<%= link_to "#{image_tag product_item.pictures.first.image.url(:medium)}".html_safe, product_item_path(product_item)%>
-			<% end %>
+<div class="main">
+	<div class="wrap">
+		<div class="section group">
+			<div class="cont span_2_of_3">
+				<h2 class="head">Featured Products</h2>
+				<div class="top-box">
+					<% @product_items.each do |product_item| %>
+						<div class="col_1_of_3 span_1_of_3"> 
+							<a href="single.html">
+								<div class="inner_content clearfix">
+									<div class="product_image">
+										<% if product_item.pictures.present?%>
+											<%= link_to "#{image_tag product_item.pictures.first.image.url(:medium)}".html_safe, product_item_path(product_item)%>
+										<% end %>
+									</div>
+									<div class="sale-box"><span class="on_sale title_shop">New</span></div>	
+									<div class="price">
+										<div class="cart-left">
+											<p class="title"><%= product_item.title %></p>
+											<div class="price1">
+												<span class="actual">Rs.<%= product_item.price %></span>
+											</div>
+										</div>
+										<div class="cart-right"> </div>
+										<div class="clear"></div>
+									</div>				
+								</div>
+							</a>
+						</div>
+					<% end %>
+					<div class="clear"></div>
+				</div>
+			</div>
 		</div>
-		<div class="divInner2">
-			Item ID <%= link_to product_item.id, product_item_path(product_item) %><br>
-			Title <%= product_item.title %><br>
-			Available Quality <%= product_item.available_quantity %><br>
-			Description <%= product_item.description %><br>
-			Price <%= product_item.price %><br>
-			Active <%= product_item.is_active %><br>		
-			<%if product_item.user_id == current_user.id %>
-				<%= link_to t('.edit', :default => t("helpers.links.edit")),edit_product_item_path(product_item), :class => 'btn btn-mini' %>
-				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),product_item_path(product_item),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
-			<% end %>
-		</div>
-		<!--%if @cart_items.nil?%-->
-			<%= link_to t('.new', :default => "Add to Mycart"),my_cart_carts_path(:user_id=>current_user.id, :product_item_ids=>product_item.id),:class => 'btn btn-primary', :style=>"color:white;" %>
-		<!--%else%>
-		Already Added in you cart
-		<!--%end%-->
 	</div>
-	<% end %>
-<% end %>	
-<%if current_user.role_type == "ADMIN" || current_user.role_type == "RETAILER"%>
-	<%= link_to t('.new', :default => "Create"),new_product_item_path,:class => 'btn btn-primary', :style=>"color:white;" %>
-<%end%>
-
-
-<%= will_paginate @product_items, renderer: BootstrapPagination::Rails %>
-	
+</div>
+<%= render "layouts/sidebar" %>
