--- a/app/views/product_items/show.html.erb
+++ b/app/views/product_items/show.html.erb
@@ -259,7 +259,7 @@
 					   </ul>
 		       </section>
 		       <script src="/assets/leoshop-js/jquery.easydropdown.js"></script>
-		      </div
+		      </div>
 		      <div class="clear"></div>
 			</div>
 			 <div class="clear"></div>
