--- a/app/views/product_items/index.html.erb
+++ b/app/views/product_items/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = ProductItem -%>
 <div class="page-header">
-  <h1>Products</h1>
+  <h1>Products123</h1>
 </div>
 <% if !@product_items.present? %>
 	Sorry!! No Products Found
