--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -164,9 +164,9 @@
 			<div class="rsidebar span_1_of_left">
 				<div class="top-border"> </div>
 				 <div class="border">
-	             <link href="leoshop-css/default.css" rel="stylesheet" type="text/css" media="all" />
-	             <link href="leoshop-css/nivo-slider.css" rel="stylesheet" type="text/css" media="all" />
-				  <script src="leoshop-js/jquery.nivo.slider.js"></script>
+	             <link href="/assets/leoshop-css/default.css" rel="stylesheet" type="text/css" media="all" />
+	             <link href="/assets/leoshop-css/nivo-slider.css" rel="stylesheet" type="text/css" media="all" />
+				  <script src="/assets/leoshop-js/jquery.nivo.slider.js"></script>
 				    <script type="text/javascript">
 				    $(window).load(function() {
 				        $('#slider').nivoSlider();
