removed cart for retailer

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,9 +54,6 @@
 							</ul-->
 						</li> |
 					<%end%>
-					<% if User.find_role?(current_user) == "B"%>
-						<li><%= link_to "Products", product_items_path %> </li> |
-					<%end%>
 					<% if User.find_role?(current_user) == "C"%>
 						<%if current_user.cart.product_item_ids && current_user.cart.product_item_ids%>
 							<li><%= link_to "My Cart (#{current_user.cart.product_item_ids.count})", carts_path %> </li> |
@@ -84,87 +81,12 @@
 			</div>
 			<div class="menu">
 						<ul class="megamenu skyblue">
-		<li class="active grid"><a href="index.html">Home</a></li>
-		<li><a class="color4" href="#">women</a>
-			<div class="megapanel">
-				<div class="row">
-					<div class="col1">
-						<div class="h_nav">
-							<h4>Contact Lenses</h4>
-							<ul>
-								<li><a href="womens.html">Daily-wear soft lenses</a></li>
-								<li><a href="womens.html">Extended-wear</a></li>
-								<li><a href="womens.html">Lorem ipsum </a></li>
-								<li><a href="womens.html">Planned replacement</a></li>
-							</ul>	
-						</div>							
-					</div>
-					<div class="col1">
-						<div class="h_nav">
-							<h4>Sun Glasses</h4>
-							<ul>
-								<li><a href="womens.html">Heart-Shaped</a></li>
-								<li><a href="womens.html">Square-Shaped</a></li>
-								<li><a href="womens.html">Round-Shaped</a></li>
-								<li><a href="womens.html">Oval-Shaped</a></li>
-							</ul>	
-						</div>							
-					</div>
-					<div class="col1">
-						<div class="h_nav">
-							<h4>Eye Glasses</h4>
-							<ul>
-								<li><a href="womens.html">Anti Reflective</a></li>
-								<li><a href="womens.html">Aspheric</a></li>
-								<li><a href="womens.html">Bifocal</a></li>
-								<li><a href="womens.html">Hi-index</a></li>
-								<li><a href="womens.html">Progressive</a></li>
-							</ul>	
-						</div>												
-					</div>
-					</div>
-				</div>
-			</li>				
-			<li><a class="color5" href="#">Men</a>
-			<div class="megapanel">
-				<div class="col1">
-						<div class="h_nav">
-							<h4>Contact Lenses</h4>
-							<ul>
-								<li><a href="mens.html">Daily-wear soft lenses</a></li>
-								<li><a href="mens.html">Extended-wear</a></li>
-								<li><a href="mens.html">Lorem ipsum </a></li>
-								<li><a href="mens.html">Planned replacement</a></li>
-							</ul>	
-						</div>							
-					</div>
-					<div class="col1">
-						<div class="h_nav">
-							<h4>Sun Glasses</h4>
-							<ul>
-								<li><a href="mens.html">Heart-Shaped</a></li>
-								<li><a href="mens.html">Square-Shaped</a></li>
-								<li><a href="mens.html">Round-Shaped</a></li>
-								<li><a href="mens.html">Oval-Shaped</a></li>
-							</ul>	
-						</div>							
-					</div>
-					<div class="col1">
-						<div class="h_nav">
-							<h4>Eye Glasses</h4>
-							<ul>
-								<li><a href="mens.html">Anti Reflective</a></li>
-								<li><a href="mens.html">Aspheric</a></li>
-								<li><a href="mens.html">Bifocal</a></li>
-								<li><a href="mens.html">Hi-index</a></li>
-								<li><a href="mens.html">Progressive</a></li>
-							</ul>	
-						</div>												
-					</div>
-				</div>
-			</li>
-			<li><a class="color6" href="other.html">Other</a></li>
-			<li><a class="color7" href="other.html">Purchase</a></li>
+		<li class="active grid"><a href="/product_items">Home</a></li>
+		<% if User.find_role?(current_user) == "B"%>
+			<li><%= link_to "Products", product_items_path, :class => "color4" %> 
+			<li><a class="color6" href="other.html">Approve order</a></li>
+			<li><a class="color6" href="other.html">Order History</a></li>
+		<%end%>
 		</ul>
 		</div>
 	</div>
@@ -176,6 +98,7 @@
 	</form>
 	</div>
 	<div class="tag-list">
+		<%if current_user && User.find_role?(current_user) == "C"%>
 		<ul class="icon1 sub-icon1 profile_img">
 		<li><a class="active-icon c1" href="#"> </a>
 			<ul class="sub-icon1 list">
@@ -184,15 +107,16 @@
 			</ul>
 		</li>
 	</ul>
-	<ul class="icon1 sub-icon1 profile_img">
-		<li><a class="active-icon c2" href="#"> </a>
-			<ul class="sub-icon1 list">
-				<li><h3>No Products</h3><a href=""></a></li>
-				<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
-			</ul>
-		</li>
-	</ul>
+		<ul class="icon1 sub-icon1 profile_img">
+			<li><a class="active-icon c2" href="#"> </a>
+				<ul class="sub-icon1 list">
+					<li><h3>No Products</h3><a href=""></a></li>
+					<li><p>Lorem ipsum dolor sit amet, consectetuer  <a href="">adipiscing elit, sed diam</a></p></li>
+				</ul>
+			</li>
+		</ul>
 		<ul class="last"><li><a href="#">Cart(0)</a></li></ul>
+		<%end%>
 	</div>
 	</div>
 	 <div class="clear"></div>
